# prouter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/prouter/: __init__.py  router.py
tests/: test_graph_builder.py  test_smoke.py
