[project]
name = "prouter"
version = "0.2.0"
description = "Route filesystem paths through pattern -> handler -> pattern rules with visibility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
]
[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prouter"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.shredguard]

[[tool.shredguard.patterns]]
regex = "_[MF]_"
description = "Problem Catch"

[[tool.shredguard.patterns]]
regex = "v\\d+"
description = "Visit pattern"
